Assignment 2 overflow bug  fixed

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -167,6 +167,12 @@ img {
 .taskItem pre {
   margin-right: auto;
   color: rgb(133, 133, 133);
+  overflow-x: auto;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
 }
 
 .taskItem button {
